src/objects/Part_Alternates__c.object
<CustomObject>
    <fields>
        <fullName>Alternate_Part_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alternate Part ID</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part Alternates (Alternate Part ID)</relationshipLabel>
        <relationshipName>Part_Alternates1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternate_Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alternate Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Same_Vendor__c</fullName>
	    <formula>IF(Part_ID__r.Vendor__c == Alternate_Part_ID__r.Vendor__c, true, false)</formula>
	    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
	    <label>Is Same Vendor</label>
	    <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Part ID</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Part Alternates</relationshipLabel>
        <relationshipName>Part_Alternates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Relation_Unique_Check__c</fullName>
        <label>Part Relation Unique Check</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relation__c</fullName>
        <label>Relation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate</fullName>
                </value>
                <value>
                    <fullName>Replaces</fullName>
                </value>
                <value>
                    <fullName>Replaced By</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Part_Alternates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <label>Part Alternates</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PAN-{0000000}</displayFormat>
        <label>Part Alternates Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Part Alternates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_for_same_vendor_superssion</fullName>
	    <active>true</active>
	    <errorConditionFormula>IF(AND(!Is_Same_Vendor__c, OR(ISPICKVAL(Relation__c, &apos;Replaces&apos;), ISPICKVAL(Relation__c, &apos;Replaced By&apos;))), true, false)</errorConditionFormula>
    	<errorMessage>Suppressions must be from same vendor</errorMessage>
    </validationRules>
</CustomObject>